--- a/css/styles.css
+++ b/css/styles.css
@@ -491,7 +491,7 @@ p,
   display: flex;
   flex-direction: column;
 }
-.sign label {
+.sign-proposal {
   color: var(--primary-white-color);
   font-weight: 700;
   line-height: calc(16 / 14);
@@ -533,7 +533,12 @@ p,
   align-items: center;
   cursor: pointer;
 }
-.sign button::after {
+.send-logo {
+  width: 24px;
+  height: 24px;
+  margin-left: 10px;
+}
+/* .sign button::after {
   display: inline-block;
   content: '';
   width: 24px;
@@ -543,7 +548,7 @@ p,
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
+} */
 
 .backdrop {
   position: fixed;
@@ -558,17 +563,8 @@ p,
   visibility: visible;
   transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* pointer-events: none; */
 }
 .backdrop.is-hidden {
-  /* position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  padding: 0;
-  margin: 0;
-  background-color: rgba(0, 0, 0, 0.2); */
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
@@ -581,7 +577,7 @@ p,
   top: 50%;
   transform: translate(-50%, -50%);
 
-  padding: 0;
+  padding: 40px;
   margin: 0;
   width: 528px;
   height: 581px;
@@ -617,15 +613,15 @@ p,
   fill: var(--accent-color);
 }
 .close-svg {
-  /* position: absolute;
+  position: relative;
   top: 0;
-  left: 0; */
+  left: 0;
+
   width: 11px;
   height: 11px;
 }
 .form-prposal {
-  width: 448px;
-  margin: 40px auto 12px auto;
+  margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
   line-height: calc(23 / 20);
@@ -633,6 +629,7 @@ p,
   letter-spacing: 0.03em;
   color: var(--primary-black-color);
 }
+
 .container-modal {
   width: 448px;
   margin: 0 auto;
@@ -651,7 +648,7 @@ p,
   left: 50px;
 }
 .input-field {
-  width: 448px;
+  width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -672,12 +669,11 @@ p,
 .icon {
   content: '';
   display: inline-block;
-  margin-left: 12px;
   position: absolute;
-  left: 0;
-  top: 50%;
-  width: 18px;
-  height: 18px;
+  left: 15px;
+  top: calc(50% + 3px);
+  width: 12px;
+  height: 12px;
 
   transition: fill 500ms linear;
 }
@@ -702,7 +698,7 @@ p,
 }
 .textarea {
   height: 120px;
-  width: 448px;
+  width: 100%;
   padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -751,7 +747,6 @@ p,
   fill: var(--primary-white-color);
   border: 2px solid #212121;
   border-radius: 2px;
-  margin: 0 10px 0 0;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
